# gl

./: AGENTS.md  Cargo.toml  GL_implementation_plan.md  GL_spec.md  README.md  gl_mockup.jsx
docs/: homebrew.md
src/: cli.rs  config.rs  git.rs  logger.rs  main.rs  perf.rs  stack.rs  syntax.rs  ui.rs  view_state.rs  watch.rs
