[package]
name = "gl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
crossterm = "=0.27.0"
notify = "=6.1.1"
ratatui = "=0.26.3"
serde = { version = "1.0", features = ["derive"] }
syntect = { version = "=5.2.0", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-fancy"] }
toml = "0.8"
